--- a/bookshelf-service.yaml
+++ b/bookshelf-service.yaml
@@ -22,7 +22,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: bookshelf-frontend
+  name: bookshelf-service
   labels:
     app: bookshelf
     tier: frontend
@@ -30,7 +30,7 @@ spec:
   type: LoadBalancer
   ports:
   - port: 80
-    targetPort: http-server
+    targetPort: 80
   selector:
-    app: bookshelf
+  - app: bookshelf
     tier: frontend
