--- a/procfile
+++ b/procfile
@@ -1,2 +1,6 @@
 bookshelf: gunicorn -b 0.0.0.0:$PORT main:app
-worker: psqworker main.books_queue
+# for kubernetes
+# worker: psqworker main.books_queue
+# for app engine
+worker: psqworker --pid /tmp/psq.pid main.books_queue
+monitor: python monitor.py /tmp/psq.pid
