--- a/app.yaml
+++ b/app.yaml
@@ -16,8 +16,17 @@
 # See https://cloud.google.com/appengine/docs/managed-vms/python/runtime
 # for details.
 
-runtime: python
-env: flex
+# For flex app engine
+# runtime: python
+# env: flex
+# manual_scaling:
+#   instances: 1
+
+# For standard app engine
+runtime: python37
+
+automatic_scaling:
+  min_instances: 0
 
 # [START entrypoint]
 # Instead of using gunicorn directly, we'll use Honcho. Honcho is a python port
@@ -26,8 +35,8 @@ env: flex
 entrypoint: honcho start -f /app/procfile bookshelf
 # [END entrypoint]
 
-runtime_config:
-  python_version: 3
+# runtime_config:
+#   python_version: 3
 
 beta_settings:
     # If using Cloud SQL, uncomment and set this value to the Cloud SQL
