--- a/worker.yaml
+++ b/worker.yaml
@@ -18,16 +18,20 @@
 
 # [START worker]
 service: worker
-runtime: python
-env: flex
+# runtime: python
+# env: flex
+
+runtime: python37
+automatic_scaling:
+  min_instances: 0
 
 # Instead of using gunicorn directly, we'll use Honcho. Honcho is a python port
 # of the Foreman process manager. For the worker service, both the queue worker
 # and the monitor process are needed.
 entrypoint: honcho start -f /app/procfile worker monitor
 
-runtime_config:
-  python_version: 3
+# runtime_config:
+#   python_version: 3
 
 beta_settings:
     # If using Cloud SQL, uncomment and set this value to the Cloud SQL
