--- a/worker.yaml
+++ b/worker.yaml
@@ -18,20 +18,26 @@
 
 # [START worker]
 service: worker
-# runtime: python
-# env: flex
+runtime: python
+env: flex
+# manual_scaling:
+#   instances: 1
+# resources:
+#   cpu: 2
+#   memory_gb: 1.4
+#   disk_size_gb: 10
 
-runtime: python37
-automatic_scaling:
-  min_instances: 0
+# runtime: python37
+# automatic_scaling:
+#   min_instances: 0
 
 # Instead of using gunicorn directly, we'll use Honcho. Honcho is a python port
 # of the Foreman process manager. For the worker service, both the queue worker
 # and the monitor process are needed.
 entrypoint: honcho start -f /app/procfile worker monitor
 
-# runtime_config:
-#   python_version: 3
+runtime_config:
+  python_version: 3
 
 beta_settings:
     # If using Cloud SQL, uncomment and set this value to the Cloud SQL
