--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,56 @@
+asn1crypto==0.24.0
+cachetools==2.1.0
+certifi==2018.8.24
+cffi==1.11.5
+chardet==3.0.4
+click==6.7
+colorlog==2.10.0
+cryptography==2.3.1
+dill==0.2.8.2
 Flask==0.12.2
-google-cloud-datastore==1.4.0
-google-cloud-storage==1.7.0
-google-cloud-logging==1.4.0
-google-cloud-error_reporting==0.29.0
-gunicorn==19.7.1
-oauth2client==4.1.2
-mock==2.0.0
-Flask-SQLAlchemy==2.3.2
-PyMySQL==0.8.0
 Flask-PyMongo==0.5.1
-PyMongo==3.6.0
-six==1.11.0
-requests[security]==2.18.4
+Flask-SQLAlchemy==2.3.2
+future==0.16.0
+gapic-google-cloud-datastore-v1==0.15.3
+gapic-google-cloud-logging-v2==0.91.3
+google-api-core==1.1.0
+google-auth==1.5.1
+google-cloud-core==0.28.1
+google-cloud-datastore==1.7.0
+google-cloud-error-reporting==0.30.0
+google-cloud-logging==1.7.0
+google-cloud-pubsub==0.38.0
+google-cloud-storage==1.12.0
+google-gax==0.15.16
+google-resumable-media==0.3.1
+googleapis-common-protos==1.5.3
+grpc-google-iam-v1==0.11.4
+grpcio==1.15.0
+gunicorn==19.7.1
 honcho==1.0.1
+httplib2==0.11.3
+idna==2.6
+itsdangerous==0.24
+Jinja2==2.10
+MarkupSafe==1.0
+mock==2.0.0
+oauth2client==3.0.0
+pbr==4.2.0
+ply==3.8
+proto-google-cloud-datastore-v1==0.90.4
+proto-google-cloud-logging-v2==0.91.3
+protobuf==3.6.1
 psq==0.7.0
+pyasn1==0.4.4
+pyasn1-modules==0.2.2
+pycparser==2.18
+pymongo==3.6.0
+PyMySQL==0.8.0
+pyOpenSSL==18.0.0
+pytz==2018.5
+requests==2.18.4
+rsa==4.0
+six==1.11.0
+SQLAlchemy==1.2.11
+urllib3==1.22
+Werkzeug==0.14.1
