--- a/app.yaml
+++ b/app.yaml
@@ -16,21 +16,11 @@
 # See https://cloud.google.com/appengine/docs/managed-vms/python/runtime
 # for details.
 
-# For flex app engine
-runtime: python
-env: flex
-manual_scaling:
-  instances: 1
-resources:
-  cpu: 1
-  memory_gb: 1.4
-  disk_size_gb: 10
-
 # For standard app engine
-# runtime: python37
+runtime: python37
 
-# automatic_scaling:
-#   min_instances: 0
+automatic_scaling:
+  min_instances: 0
 
 # [START entrypoint]
 # Instead of using gunicorn directly, we'll use Honcho. Honcho is a python port
@@ -39,14 +29,3 @@ resources:
 entrypoint: honcho start -f /app/procfile bookshelf
 # entrypoint: honcho start -f /procfile bookshelf
 # [END entrypoint]
-
-runtime_config:
-  python_version: 3
-
-beta_settings:
-    # If using Cloud SQL, uncomment and set this value to the Cloud SQL
-    # connection name, e.g.
-    #   "project:region:cloudsql-instance"
-    # You must also update the values in config.py.
-    #
-    cloud_sql_instances: "bookshelf-212723:us-central1:library"
