--- a/app.yaml
+++ b/app.yaml
@@ -26,6 +26,6 @@ automatic_scaling:
 # Instead of using gunicorn directly, we'll use Honcho. Honcho is a python port
 # of the Foreman process manager. For the default service, only the
 # frontend process is needed.
-entrypoint: honcho start -f /app/procfile bookshelf
-# entrypoint: honcho start -f /procfile bookshelf
+# entrypoint: honcho start -f /app/procfile bookshelf
+entrypoint: honcho start -f /procfile bookshelf
 # [END entrypoint]
