--- a/app.yaml
+++ b/app.yaml
@@ -22,10 +22,12 @@ runtime: python37
 automatic_scaling:
   min_instances: 0
 
+instance_class: F2
+
 # [START entrypoint]
 # Instead of using gunicorn directly, we'll use Honcho. Honcho is a python port
 # of the Foreman process manager. For the default service, only the
 # frontend process is needed.
 # entrypoint: honcho start -f /app/procfile bookshelf
-entrypoint: honcho start -f /procfile bookshelf
+entrypoint: honcho start -f procfile bookshelf
 # [END entrypoint]
