--- a/procfile
+++ b/procfile
@@ -1,6 +1,3 @@
-bookshelf: pip install ./psq-0.7.1.tar.gz && gunicorn -b 0.0.0.0:$PORT main:app
-# for kubernetes
-# worker: psqworker main.books_queue
-# for app engine
-worker: psqworker --pid /tmp/psq.pid main.books_queue
+bookshelf: gunicorn -b 0.0.0.0:$PORT main:app
+worker: ./psqworker --pid /tmp/psq.pid main.books_queue
 monitor: python monitor.py /tmp/psq.pid
